templates/pod-with-probe.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-name
  labels:
    label-key1: label-value1
  annotations:
    annotation-key1: annotation-value
    annotation-key2: veri long annotation value, bla bla bla bla bla bla
spec:
  containers:
    - name: container-name
      image: image-name
      ports:
        - containerPort: 80
      livenessProbe:
        httpGet:
          path: /health
          port: 80
        initialDelaySeconds: 0 # pertama kali pengecekan tunggu berapa detik
        periodSeconds: 10 # periode pengecekan seberapa sering
        timeoutSeconds: 1 # lagi connect di anggap timeout berapa lama
        successThreshold: 1 # jika misalkan asalnya tidak healthy mau berapa kali cek sehingga di anggap healthy
        failureThreshold: 3 # berapa kali pengecekan gagal sehingga di anggap gagal atau tidak healthy
      readinessProbe:
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 0
        periodSeconds: 10
        timeoutSeconds: 1
        successThreshold: 1
        failureThreshold: 3
      startupProbe:
        httpGet:
          path: / 
          port: 80
        initialDelaySeconds: 0
        periodSeconds: 10
        timeoutSeconds: 1
        successThreshold: 1
        failureThreshold: 3
