templates/service-with-endpoints.yml
apiVersion: v1
kind: Service
metadata:
  name: external-service
  labels:
    label-key1: label-value1
spec:
  ports:
    - port: 80

---

apiVersion: v1
kind: Endpoints 
metadata:
  name: external-service # harus sama dengan nama service
  labels:
    label-key1: label-value1
subsets:
  - addresses: # address external service
      - ip: 11.11.11.11
      - ip: 22.22.22.22
    ports:
      - port: 80 # port external service
