templates/service-with-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: service-name
  labels:
    label-key1: label-value1
spec:
  type: LoadBalancer # type load-balancer
  selector:
    label-key1: label-value1
  ports:
    - port: 8088
      targetPort: 80
